# hospital-microservices-nextjs-django

./: .gitignore
cluster/: .dockerignore  docker-compose.yml
cluster/414/: package.json  tsconfig.json
cluster/414/src/models/account/: index.reducers.ts
cluster/414/src/models/auth/: index.service.ts
cluster/414/src/models/patient/: index.service.ts
cluster/414/src/models/patient-cart/: index.service.ts
cluster/414/src/models/patient-transaction/: index.service.ts
cluster/414/src/models/schedule/: index.types.ts
cluster/414/src/models/service-type/: index.thunks.ts
cluster/414/src/store/: index.reducers.ts  index.storage.ts
cluster/414/src/widgets/footer/: footer.tsx
cluster/microfrontends/: package.json
cluster/microfrontends/hospital-patient/: .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json
cluster/microfrontends/hospital-patient/src/: middleware.ts
cluster/microfrontends/hospital-patient/src/app/: layout.tsx  page.tsx
cluster/microfrontends/hospital-patient/src/hooks/: use-app-actions.ts  use-app-dispatch.ts  use-app-selector.ts  use-app-store.ts
cluster/microfrontends/hospital-patient/src/providers/: index.tsx  with-persist.tsx  with-store.tsx
cluster/microfrontends/hostipal-nginx/: Dockerfile
cluster/microservices/backend/: Dockerfile  pyproject.toml
cluster/microservices/business/: pyproject.toml
cluster/microservices/core/: pyproject.toml
cluster/microservices/employee/: pyproject.toml
cluster/microservices/patient/: pyproject.toml
old/frontend-old/: index.html
(+41 files in other folders)
